Fixed bug with TextView drawable background on older APIs

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <!-- Icon height in navigation drawer is 20dp w/ 6dp padding -->
+  <!-- icon height in navigation drawer is 20dp w/ 6dp padding -->
   <!-- http://www.materialpalette.com/blue-grey/red -->
-  <color name="primary_light">#CFD8DC</color>
-  <color name="primary">#607D8B</color>
-  <color name="primary_dark">#455A64</color>
-  <color name="accent">#FF5252</color>
+  <color name="primary_light">#cfd8dc</color>
+  <color name="primary">#607d8b</color>
+  <color name="primary_dark">#455a64</color>
+  <color name="accent">#ff5252</color>
   <color name="primary_text">#212121</color>
   <color name="secondary_text">#727272</color>
-  <color name="icons">#FFFFFF</color>
-  <color name="divider">#B6B6B6</color>
+  <color name="icons">#ffffff</color>
+  <color name="divider">#b6b6b6</color>
 
   <color name="white">#ffffffff</color>
   <color name="black">#ff000000</color>
-  <color name="transparent">#00000000</color>
+  <color name="transparent">#0000</color>
   <color name="indentation">@color/primary</color>
-  <color name="reddit_orange">#60FF8B60</color>
-  <color name="reddit_orange_full">#FF8B60</color>
-  <color name="reddit_orange_lighter">#FFCBB8</color>
-  <color name="reddit_blue">#609494FF</color>
-  <color name="reddit_blue_full">#9494FF</color>
-  <color name="reddit_blue_lighter">#C9C9FF</color>
+  <color name="reddit_orange">#60ff8b60</color>
+  <color name="reddit_orange_full">#ff8b60</color>
+  <color name="reddit_orange_lighter">#ffcbb8</color>
+  <color name="reddit_blue">#609494ff</color>
+  <color name="reddit_blue_full">#9494ff</color>
+  <color name="reddit_blue_lighter">#c9c9ff</color>
   <color name="reddit_gold">#f6e600</color>
-  <color name="author_op_background">#0055DF</color>
+  <color name="author_op_background">#0055df</color>
   <color name="author_op_text">#ffffff</color>
   <color name="author_moderator_background">#228822</color>
   <color name="author_moderator_text">#ffffff</color>
-  <color name="author_admin_background">#FF0011</color>
+  <color name="author_admin_background">#ff0011</color>
   <color name="author_admin_text">#ffffff</color>
   <color name="markdown_quote_block">@color/primary_light</color>
-  <color name="comment_controversiality_indicator">#FF5252</color>
+  <color name="comment_controversiality_indicator">#ff5252</color>
   <color name="nsfw_tag_color">#d10023</color>
   <color name="link_color">#0000ee</color>
 </resources>
