--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -85,11 +85,11 @@
         android:orientation="horizontal">
 
       <LinearLayout
+          android:orientation="vertical"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:padding="@dimen/baseline_spacing"
-          android:orientation="vertical">
+          android:padding="@dimen/baseline_spacing">
 
         <RelativeLayout
             android:layout_width="match_parent"
