Refactoring link comments view and presenter to extend from abstract base class
Removed a lot of duplicate code in LinkCommentsPresenter

Fixed the notification of the list adapter when toggling thread visibility

Added reddit colors to colors.xml

Split strings.xml into multiple files

Updated to support library 23.2.0
Added workaround for NavigationView header issue

Refactored build.gradle

--- a/app/src/main/res/layout/add_comment_dialog.xml
+++ b/app/src/main/res/layout/add_comment_dialog.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp">
+    android:padding="@dimen/baseline_spacing">
 
   <EditText
       android:id="@+id/comment_edit_text"
