--- a/app/src/main/res/values/strings-comments.xml
+++ b/app/src/main/res/values/strings-comments.xml
@@ -3,8 +3,10 @@
   <string name="comments_fragment_title">comments</string>
   <string name="comment_score">%s</string>
   <string name="continue_thread">continue thread</string>
-  <string name="more_comments_s">load 1 more comment</string>
-  <string name="more_comments">load %s more comments</string>
+  <plurals name="more_comments">
+    <item quantity="one">load %d more comment</item>
+    <item quantity="other">load %d more comments</item>
+  </plurals>
   <string name="listing_comment_subject_commentreply">comment reply</string>
   <string name="listing_comment_subject_postreply">post reply</string>
   <string name="listing_comment_subject_usernamemention">username mention</string>
