--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -62,8 +62,8 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
-              android:drawableStart="@drawable/ic_gilded_2"
-              android:drawableLeft="@drawable/ic_gilded_2"
+              android:drawableStart="@drawable/ic_gilded_101"
+              android:drawableLeft="@drawable/ic_gilded_101"
               android:textSize="@dimen/link_metadata_text_size"
               android:textColor="@color/secondary_text"
               tools:targetApi="16"
@@ -107,7 +107,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-          <TextView
+          <com.ddiehl.android.htn.view.widgets.ColorSwapTextView
               android:id="@+id/link_author"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
