Added ColorSwapTextView which caches its original color to be accessed later Replaced functionality to set link/comment author backgrounds with ColorSwapTextView

--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -21,7 +21,7 @@
         android:layout_gravity="start|center"
         android:gravity="bottom">
 
-      <TextView
+      <com.ddiehl.android.htn.view.widgets.ColorSwapTextView
           android:id="@+id/comment_author"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
