--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -117,7 +117,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-          <TextView
+          <com.ddiehl.android.htn.view.widgets.ColorSwapTextView
               android:id="@+id/link_author"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
