--- a/app/src/main/res/layout/navigate_to_subreddit_edit_text.xml
+++ b/app/src/main/res/layout/navigate_to_subreddit_edit_text.xml
@@ -14,16 +14,16 @@
       android:layout_width="@dimen/navigation_drawer_width"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
-      android:textAlignment="viewStart"
+      android:background="@null"
       android:gravity="start"
-      android:textColor="@color/primary_text"
-      android:textSize="@dimen/navigation_drawer_item_text"
-      android:textColorHint="@color/secondary_text"
       android:hint="@string/drawer_navigate_to_subreddit"
       android:imeOptions="actionDone"
       android:inputType="text"
-      android:singleLine="true"
-      android:background="@null"
+      android:maxLines="1"
+      android:textAlignment="viewStart"
+      android:textColor="@color/primary_text"
+      android:textColorHint="@color/secondary_text"
+      android:textSize="@dimen/navigation_drawer_item_text"
       tools:ignore="UnusedAttribute"/>
 
   <ImageView
