--- a/app/src/main/res/layout/user_profile_summary.xml
+++ b/app/src/main/res/layout/user_profile_summary.xml
@@ -4,87 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/user_profile_summary"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fillViewport="true"
-    android:background="@android:color/white">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:fillViewport="true">
 
   <LinearLayout
-      android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:paddingTop="@dimen/activity_vertical_margin"
+      android:orientation="vertical"
       android:paddingBottom="@dimen/activity_vertical_margin"
       android:paddingLeft="@dimen/activity_horizontal_margin"
-      android:paddingRight="@dimen/activity_horizontal_margin">
+      android:paddingRight="@dimen/activity_horizontal_margin"
+      android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:id="@+id/user_created"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/baseline_spacing"
         android:paddingBottom="@dimen/baseline_spacing"
-        android:textSize="@dimen/user_created_text_size"
-        android:textColor="@color/primary_text"
-        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         tools:text="redditor since April 20, 2008"/>
 
     <!-- link karma & comment karma -->
     <LinearLayout
         android:id="@+id/user_karma_layout"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/baseline_spacing"
-        android:paddingBottom="@dimen/baseline_spacing"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/baseline_spacing">
 
       <LinearLayout
-          android:orientation="vertical"
           android:layout_width="0dp"
           android:layout_height="match_parent"
-          android:layout_weight="1">
+          android:layout_weight="1"
+          android:orientation="vertical">
 
         <TextView
             android:id="@+id/user_link_karma"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="@dimen/user_karma_text_size"
-            android:textColor="@color/primary_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             tools:text="57,321"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="@dimen/user_karma_label_text_size"
-            android:textColor="@color/secondary_text"
-            android:text="@string/user_link_score" />
+            android:text="@string/user_link_score"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
       </LinearLayout>
 
       <LinearLayout
-          android:orientation="vertical"
           android:layout_width="0dp"
           android:layout_height="match_parent"
-          android:layout_weight="1">
+          android:layout_weight="1"
+          android:orientation="vertical">
 
         <TextView
             android:id="@+id/user_comment_karma"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="@dimen/user_karma_text_size"
-            android:textColor="@color/primary_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             tools:text="113,069"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="@dimen/user_karma_label_text_size"
-            android:textColor="@color/secondary_text"
-            android:text="@string/user_comment_score" />
+            android:text="@string/user_comment_score"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
       </LinearLayout>
 
@@ -92,45 +80,43 @@
 
     <Button
         android:id="@+id/user_friend_button"
-        android:layout_width="@dimen/user_friend_button_width"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/user_friend_button_height"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/baseline_spacing"
         android:layout_marginBottom="@dimen/baseline_spacing"
         android:gravity="center"/>
 
     <LinearLayout
         android:id="@+id/user_note_layout"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/baseline_spacing"
-        android:paddingBottom="@dimen/baseline_spacing">
-
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textSize="@dimen/user_note_label_text_size"
-          android:textColor="@color/secondary_text"
-          android:text="@string/user_friend_note_label"/>
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/baseline_spacing"
+        android:paddingTop="@dimen/baseline_spacing">
 
       <LinearLayout
-          android:orientation="horizontal"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content">
+          android:layout_height="wrap_content"
+          android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/user_friend_note_edit"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:inputType="text"
-            android:textSize="@dimen/user_friend_note_text_size"/>
+            android:layout_weight="1">
+
+          <android.support.design.widget.TextInputEditText
+              android:id="@+id/user_friend_note_edit"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:hint="@string/user_friend_note_label"
+              android:inputType="text"
+              android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+
+        </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/user_friend_note_confirm"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:text="@string/user_friend_note_save_button"/>
 
@@ -139,19 +125,10 @@
     </LinearLayout>
 
     <!-- trophies -->
-    <LinearLayout
-        android:orientation="vertical"
+    <GridLayout
+        android:id="@+id/user_trophies"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/baseline_spacing">
-
-      <GridLayout
-          android:id="@+id/user_trophies"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center"/>
-
-    </LinearLayout>
+        android:layout_height="wrap_content"/>
 
   </LinearLayout>
 
