--- a/app/src/main/res/layout/user_profile_summary_constraint.xml
+++ b/app/src/main/res/layout/user_profile_summary_constraint.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/constraintLayout">
+    android:id="@+id/user_profile_summary">
 
   <TextView
       tools:text="redditor since April 20, 2008"
@@ -13,10 +13,10 @@
       android:layout_height="wrap_content"
       android:id="@+id/user_created"
       android:textAppearance="@style/TextAppearance.AppCompat.Small"
-      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
+      app:layout_constraintLeft_toLeftOf="@+id/user_profile_summary"
       android:layout_marginLeft="16dp"
       android:layout_marginStart="16dp"
-      app:layout_constraintTop_toTopOf="@+id/constraintLayout"
+      app:layout_constraintTop_toTopOf="@+id/user_profile_summary"
       android:layout_marginTop="16dp"/>
 
   <TextView
@@ -25,7 +25,7 @@
       android:layout_height="wrap_content"
       android:id="@+id/user_comment_karma"
       android:textAppearance="@style/TextAppearance.AppCompat.Large"
-      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
+      app:layout_constraintLeft_toLeftOf="@+id/user_profile_summary"
       android:layout_marginLeft="16dp"
       android:layout_marginStart="16dp"
       app:layout_constraintTop_toBottomOf="@+id/user_created"
@@ -40,7 +40,8 @@
       app:layout_constraintLeft_toRightOf="@+id/user_comment_karma"
       android:layout_marginLeft="8dp"
       android:layout_marginStart="8dp"
-      app:layout_constraintBottom_toBottomOf="@+id/user_comment_karma"/>
+      app:layout_constraintTop_toBottomOf="@+id/user_created"
+      android:layout_marginTop="8dp"/>
 
   <TextView
       android:text="@string/user_link_score"
@@ -48,10 +49,8 @@
       android:layout_height="wrap_content"
       android:id="@+id/textView4"
       android:textAppearance="@style/TextAppearance.AppCompat.Small"
-      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
-      android:layout_marginLeft="16dp"
-      android:layout_marginStart="16dp"
-      app:layout_constraintTop_toBottomOf="@+id/user_link_karma"/>
+      app:layout_constraintLeft_toLeftOf="@+id/user_comment_karma"
+      app:layout_constraintTop_toBottomOf="@+id/user_comment_karma"/>
 
   <TextView
       android:text="@string/user_comment_score"
@@ -67,38 +66,41 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/user_friend_button"
-      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
-      android:layout_marginLeft="16dp"
-      android:layout_marginStart="16dp"
-      app:layout_constraintTop_toBottomOf="@+id/textView4"
-      android:layout_marginTop="8dp"/>
+      tools:layout_editor_absoluteX="16dp"
+      tools:layout_editor_absoluteY="273dp"/>
 
   <EditText
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textPersonName"
       android:text="@string/user_friend_note_label"
       android:ems="10"
       android:id="@+id/user_friend_note_edit"
-      app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
+      app:layout_constraintLeft_toLeftOf="@+id/user_profile_summary"
       android:layout_marginLeft="16dp"
       android:layout_marginStart="16dp"
       app:layout_constraintTop_toBottomOf="@+id/user_friend_button"
-      android:layout_marginTop="8dp"
-      app:layout_constraintRight_toLeftOf="@+id/button3"
-      android:layout_marginRight="8dp"
-      android:layout_marginEnd="8dp"
-      app:layout_constraintHorizontal_bias="0.04"/>
+      android:layout_marginTop="8dp"/>
 
   <Button
       android:text="@string/user_friend_note_save_button"
       android:layout_width="88dp"
       android:layout_height="48dp"
-      android:id="@+id/button3"
+      android:id="@+id/user_friend_note_confirm"
       app:layout_constraintTop_toTopOf="@+id/user_friend_note_edit"
-      app:layout_constraintRight_toRightOf="@+id/constraintLayout"
+      app:layout_constraintRight_toRightOf="@+id/user_profile_summary"
       android:layout_marginRight="16dp"
       android:layout_marginEnd="16dp"
       app:layout_constraintBottom_toBottomOf="@+id/user_friend_note_edit"/>
+
+  <GridLayout
+      android:layout_width="7dp"
+      android:layout_height="wrap_content"
+      android:id="@+id/user_trophies"
+      tools:layout_editor_absoluteX="0dp"
+      app:layout_constraintBottom_toBottomOf="@+id/user_profile_summary"
+      android:layout_marginBottom="16dp">
+
+  </GridLayout>
 
 </android.support.constraint.ConstraintLayout>
