--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -47,10 +47,9 @@
   <dimen name="user_karma_text_size">36sp</dimen>
   <dimen name="user_karma_label_text_size">16sp</dimen>
   <dimen name="user_note_label_text_size">12sp</dimen>
-  <dimen name="user_friend_button_width">232dp</dimen>
-  <dimen name="user_friend_button_height">72dp</dimen>
+  <dimen name="user_friend_button_height">48dp</dimen>
   <dimen name="user_friend_note_text_size">28sp</dimen>
-  <dimen name="user_trophy_icon_width">72dp</dimen>
+  <dimen name="user_trophy_icon_width">72px</dimen>
   <dimen name="user_trophy_name_text_width">80dp</dimen>
   <dimen name="user_trophy_icon_height">@dimen/user_trophy_icon_width</dimen>
   <dimen name="user_trophy_name_text_size">16sp</dimen>
