--- a/app/src/main/res/layout/listings_fragment_inbox.xml
+++ b/app/src/main/res/layout/listings_fragment_inbox.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+    android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent">
 
-  <include layout="@layout/navigation_tab_layout" />
+  <LinearLayout
+      android:layout_height="match_parent"
+      android:layout_width="match_parent"
+      android:orientation="vertical" >
 
-  <include layout="@layout/listings_fragment" />
+    <include layout="@layout/navigation_tab_layout" />
 
-</LinearLayout>
+    <include layout="@layout/listings_fragment" />
+
+  </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
