--- a/app/src/main/res/layout/listings_fragment_user_profile.xml
+++ b/app/src/main/res/layout/listings_fragment_user_profile.xml
@@ -7,7 +7,8 @@
 
   <include layout="@layout/navigation_tab_layout" />
 
-  <FrameLayout
+  <android.support.design.widget.CoordinatorLayout
+      android:id="@+id/coordinator_layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
@@ -15,6 +16,6 @@
 
     <include layout="@layout/user_profile_summary" />
 
-  </FrameLayout>
+  </android.support.design.widget.CoordinatorLayout>
 
 </LinearLayout>
