--- a/app/src/main/res/values/strings-settings.xml
+++ b/app/src/main/res/values/strings-settings.xml
@@ -40,4 +40,28 @@
   <string name="pref_creddit_autorenew">automatically renew gold</string>
   <string name="pref_allow_analytics">allow collection of usage data</string>
   <string name="pref_use_custom_tabs">use Chrome tabs to view links</string>
+  <string name="pref_font">font</string>
+
+  <string-array name="pref_font_entries">
+    <item>@string/font_system</item>
+    <item>@string/font_arimo</item>
+    <item>@string/font_maven_pro</item>
+    <item>@string/font_open_sans</item>
+    <item>@string/font_oxygen</item>
+  </string-array>
+
+  <string name="font_system">(system)</string>
+  <string name="font_arimo">Arimo</string>
+  <string name="font_maven_pro">Maven Pro</string>
+  <string name="font_open_sans">Open Sans</string>
+  <string name="font_oxygen">Oxygen</string>
+
+  <string-array name="pref_font_values">
+    <item />
+    <item>fonts/Arimo/Arimo-Regular.ttf</item>
+    <item>fonts/Maven_Pro/MavenPro-Regular.ttf</item>
+    <item>fonts/Open_Sans/OpenSans-Regular.ttf</item>
+    <item>fonts/Oxygen/Oxygen-Regular.ttf</item>
+  </string-array>
+
 </resources>
