--- a/app/src/main/res/values/strings-settings.xml
+++ b/app/src/main/res/values/strings-settings.xml
@@ -57,11 +57,18 @@
   <string name="font_oxygen">Oxygen</string>
 
   <string-array name="pref_font_values">
-    <item />
-    <item>fonts/Arimo/Arimo-Regular.ttf</item>
-    <item>fonts/Maven_Pro/MavenPro-Regular.ttf</item>
-    <item>fonts/Open_Sans/OpenSans-Regular.ttf</item>
-    <item>fonts/Oxygen/Oxygen-Regular.ttf</item>
+    <item>@string/font_system_value</item>
+    <item>@string/font_arimo_value</item>
+    <item>@string/font_maven_pro_value</item>
+    <item>@string/font_open_sans_value</item>
+    <item>@string/font_oxygen_value</item>
   </string-array>
+
+  <string name="font_system_value" />
+  <string name="font_arimo_value">fonts/Arimo/Arimo-Regular.ttf</string>
+  <string name="font_maven_pro_value">fonts/Maven_Pro/MavenPro-Regular.ttf</string>
+  <string name="font_open_sans_value">fonts/Open_Sans/OpenSans-Regular.ttf</string>
+  <string name="font_oxygen_value">fonts/Oxygen/Oxygen-Regular.ttf</string>
+
 
 </resources>
