--- a/app/src/main/res/layout/subscription_manager_item.xml
+++ b/app/src/main/res/layout/subscription_manager_item.xml
@@ -4,22 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/baseline_spacing">
 
   <TextView
       android:id="@+id/name"
-      style="@style/TextAppearance.AppCompat.Large"
+      style="@style/TextAppearance.AppCompat.Medium"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="TEST"
+      android:textColor="@color/primary_text"
       tools:text="/r/AskReddit"/>
 
   <TextView
       android:id="@+id/num_subscribers"
-      style="@style/TextAppearance.AppCompat.Medium"
+      style="@style/TextAppearance.AppCompat.Small"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:textColor="@color/secondary_text"
       tools:text="15,860 subscribers"/>
 
 </LinearLayout>
