--- a/app/src/main/res/layout/listings_fragment_inbox.xml
+++ b/app/src/main/res/layout/listings_fragment_inbox.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/coordinator_layout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <LinearLayout
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <include layout="@layout/navigation_tab_layout" />
+        <android.support.design.widget.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="@dimen/toolbar_elevation"
+                tools:targetApi="lollipop">
+
+            <include layout="@layout/app_toolbar" />
+
+            <include layout="@layout/navigation_tab_layout" />
+
+        </android.support.design.widget.AppBarLayout>
 
         <include layout="@layout/listings_fragment" />
 
