--- a/app/src/main/res/layout/listings_fragment_private_message.xml
+++ b/app/src/main/res/layout/listings_fragment_private_message.xml
@@ -11,35 +11,44 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/primary"
                 android:elevation="@dimen/toolbar_elevation"
-                android:gravity="center_vertical"
-                android:minHeight="@dimen/private_message_subject_max_height"
-                android:orientation="vertical"
-                android:paddingBottom="@dimen/link_list_item_margin_vertical"
-                android:paddingLeft="@dimen/link_list_item_margin_horizontal"
-                android:paddingRight="@dimen/link_list_item_margin_horizontal"
-                android:paddingTop="@dimen/link_list_item_margin_vertical"
-                tools:ignore="UnusedAttribute">
+                tools:targetApi="lollipop">
 
-            <TextView
-                    android:id="@+id/conversation_subject"
+            <include layout="@layout/app_toolbar" />
+
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="start"
-                    android:maxLines="2"
-                    android:textAlignment="viewStart"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:textColor="@android:color/white"
-                    tools:ignore="UnusedAttribute"
-                    tools:text="The quick brown fox jumped over the white fence" />
+                    android:background="@color/primary"
+                    android:gravity="center_vertical"
+                    android:minHeight="@dimen/private_message_subject_max_height"
+                    android:orientation="vertical"
+                    android:paddingBottom="@dimen/link_list_item_margin_vertical"
+                    android:paddingLeft="@dimen/link_list_item_margin_horizontal"
+                    android:paddingRight="@dimen/link_list_item_margin_horizontal"
+                    android:paddingTop="@dimen/link_list_item_margin_vertical"
+                    tools:ignore="UnusedAttribute">
 
-        </LinearLayout>
+                <TextView
+                        android:id="@+id/conversation_subject"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:fontFamily="sans-serif-light"
+                        android:gravity="start"
+                        android:maxLines="2"
+                        android:textAlignment="viewStart"
+                        android:textAppearance="?android:textAppearanceMedium"
+                        android:textColor="@android:color/white"
+                        tools:ignore="UnusedAttribute"
+                        tools:text="The quick brown fox jumped over the white fence" />
+
+            </LinearLayout>
+
+        </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/swipe_refresh_layout"
