--- a/app/src/main/res/layout/listings_fragment_user_profile.xml
+++ b/app/src/main/res/layout/listings_fragment_user_profile.xml
@@ -1,21 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_height="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-    <include layout="@layout/navigation_tab_layout" />
-
-    <android.support.design.widget.CoordinatorLayout
-            android:id="@+id/coordinator_layout"
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <include layout="@layout/listings_fragment" />
+        <android.support.design.widget.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="@dimen/toolbar_elevation"
+                tools:targetApi="lollipop">
 
-        <include layout="@layout/user_profile_summary" />
+            <include layout="@layout/app_toolbar" />
 
-    </android.support.design.widget.CoordinatorLayout>
+            <include layout="@layout/navigation_tab_layout" />
 
-</LinearLayout>
+        </android.support.design.widget.AppBarLayout>
+
+        <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <android.support.v4.widget.SwipeRefreshLayout
+                    android:id="@+id/swipe_refresh_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scrollbars="vertical" />
+
+            </android.support.v4.widget.SwipeRefreshLayout>
+
+            <include layout="@layout/user_profile_summary" />
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
