--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -56,4 +56,6 @@
     <dimen name="link_metadata_margin">4dp</dimen>
     <dimen name="private_message_subject_max_height">48dp</dimen>
     <dimen name="unread_message_indicator_size">16dp</dimen>
+    <dimen name="subscription_icon_width">48dp</dimen>
+    <dimen name="subscription_icon_height">48dp</dimen>
 </resources>
